# Real-time-Multi-Robot-Mission-Planning-in-Cluttered-Environment

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Findortools.cmake
comparison/: compare_varying_num_agents.py  compare_varying_num_agents_box.py  compare_varying_num_agents_with_OS.py  compare_varying_num_agents_with_optimum.py  compare_varying_num_tasks.py  compare_varying_num_tasks_bar.py  compare_varying_num_tasks_box.py  compare_varying_num_tasks_with_OS.py  compare_varying_num_tasks_with_optimum.py  plot_varying_num_agents.py  plot_varying_num_agents_with_optimum.py  plot_varying_num_tasks.py  plot_varying_num_tasks_with_optimum.py  single_compare_CBBA_many_agents.py  single_compare_CBBA_one_agent.py  single_compare_many_agents.py  single_compare_one_agent.py
comparison/data/: 0_optimum_varying_num_agents_distance_list_all_cases_cbba.csv  0_optimum_varying_num_agents_distance_list_all_cases_my.csv  0_optimum_varying_num_agents_distance_list_all_cases_os.csv  0_optimum_varying_num_agents_time_used_list_all_cases_cbba.csv  0_optimum_varying_num_agents_time_used_list_all_cases_my.csv  0_optimum_varying_num_agents_time_used_list_all_cases_os.csv  100_optimum_varying_num_agents_distance_list_all_cases_cbba.csv  (+53 more)
example/: pathmagic.py  run_CBBA_Path_Finding.py  run_ClusterAssign.py  run_FindPathMany_minimal.py  run_FindPathMany_plot.py  run_FindPathOneByOne.py  run_GA_MissionPlanning.py  run_GA_SolveSingleAgent.py  run_KMeans.py  run_MissionPlanning.py  run_MissionPlanning_online.py  run_OptimalSearch.py  run_PathPlanningMultiAgent_online.py  run_SolveOneAgent.py  run_SolveOneAgent_online.py  run_cbba.py
experiment/: config_aimslab_ex_1.json  config_aimslab_ex_2.json  config_aimslab_ex_3.json
include/: ga_solver.hpp  k_means.hpp  k_means_plus_plus.hpp  k_means_with_external_centroids.hpp  k_means_with_plus_plus.hpp  node.h  optimal_search.hpp  optimal_search_old.hpp  optimal_search_v2.hpp  solve_test.hpp
src/: AgentFSM.py  CBBA_Path_Finding.py  DrMaMP.cpp  GA_Solver.cpp  K_MEANS.cpp  MissionPlanner.py  MissionPlannerMultiAgent.py  OptimalSearch.cpp  OptimalSearchV2.cpp  PathPlanner.py  Simulator.py  SimulatorCBBA.py  compute_path_distance.py  discrete_path_to_time_traj.py  filter_comparison.py  interpolate_traj.py  pathmagic.py  permutation.cpp
test/: k_means_comparison.py  single_compare_MissionPlanning_with_legacy.py  test_AgentFSM.py  test_ga_solver.cpp  test_k_means.cpp  test_optimal.cpp  test_optimal_search.cpp  test_optimal_search_v2.cpp  test_or_tools.cpp  test_solve_cpp.cpp  test_solver_segmentation_fault.py  test_tri.cpp
(+10 files in other folders)
